fix: aligned text correctly

--- a/src/components/CardButton/style.module.css
+++ b/src/components/CardButton/style.module.css
@@ -13,6 +13,7 @@
     flex-direction: column;
     gap: 0.8rem;
     align-items: center;
+    text-align: center;
 }
 
 .main{
